--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,3 +49,4 @@ conan_cmake_install(PATH_OR_REFERENCE "${CMAKE_CURRENT_LIST_DIR}/conanfile.txt" 
 
 add_subdirectory(src)
 add_subdirectory(test)
+add_subdirectory(app)
