--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,8 +6,6 @@ set(CMAKE_AUTOMOC ON)
 
 add_executable(${target_name}
 	main.cxx
-	home-window.cxx
-	home-window.hxx
 	utility.cxx
 	utility.hxx
 )
@@ -17,10 +15,11 @@ target_link_libraries(${target_name}
 		Qt6::Widgets
 		Qt6::QWindowsIntegrationPlugin
 )
-
 # Copy QT platform libs https://doc.qt.io/qt-6/windows-deployment.html
 add_custom_command(TARGET ${target_name} POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy_directory
 	${Qt6_QWindowsIntegrationPlugin_LIB_DIRS}
 	"$<TARGET_FILE_DIR:${target_name}>/platforms"  # The name of the folder MUST be "platforms" for the program to run
 )
+
+add_subdirectory(home-window)
