--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ set(conan_build_dir "${PROJECT_BINARY_DIR}/conan")
 list(APPEND CMAKE_MODULE_PATH "${conan_build_dir}")
 
 conan_cmake_autodetect(conan_settings)  # https://github.com/conan-io/cmake-conan#conan_cmake_autodetect
-conan_cmake_install(PATH_OR_REFERENCE "${CMAKE_CURRENT_LIST_DIR}/conanfile.txt"  # https://github.com/conan-io/cmake-conan#conan_cmake_install
+conan_cmake_install(PATH_OR_REFERENCE "${CMAKE_CURRENT_LIST_DIR}/conanfile.py"  # https://github.com/conan-io/cmake-conan#conan_cmake_install
 	BUILD missing
 	REMOTE conancenter
 	SETTINGS ${conan_settings}
